--- a/views/aboutme.erb
+++ b/views/aboutme.erb
@@ -6,10 +6,9 @@
       Before that I was a multimedia producer at
       <a href="http://www.pbs.org/">PBS</a> where I learned countless animal factoids
       while working on my primary property <em>Nature</em>.
+      I break those out regularly at dinner parties.
       I like doing things on computers.
-      I also like doing a lot of other things:
-      filling in crossword puzzles, making ice cream sundaes, and
-      playing board games.
+      I also like doing a lot of <a href="/favoritethings">other things</a>.
 
 
   <div class="contact"><a href="mailto:katesuzannefulton@gmail.com">Email me.</a>
