--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href='http://fonts.googleapis.com/css?family=Oswald:700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Cousine' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/resets.css" type="text/css" />
     <link rel="stylesheet" href="/css/blog.css" type="text/css" />
 
