--- a/views/aboutme.erb
+++ b/views/aboutme.erb
@@ -1,16 +1,18 @@
-<section>
-  <h2>Hi. I'm Kate. Nice to meet you.</h2>
-  <p>A developer-in-training, I'm currently a student in
+<article>
+  <hgroup>
+    <h2>Hi. I'm Kate. Nice to meet you.</h2>
+  </hgroup>
+  <section class="about-image"><img src="/images/kate.jpg" alt="Me"></section>
+
+  <section class="about-section">
+    A developer-in-training, I'm currently a student in
     <a href="http://adadevelopersacademy.org/" target="blank">Ada Developers
-      Academy's</a> Cohort[1].
-      Before that I was a multimedia producer at
-      <a href="http://www.pbs.org/">PBS</a> where I learned countless animal factoids
-      while working on my primary property <em>Nature</em>.
-      I break those out regularly at dinner parties.
-      I like doing things on computers.
-      I also like doing a lot of <a href="/favoritethings">other things</a>.
+    Academy's</a> Cohort[1]. Before that I was a multimedia producer at
+    <a href="http://www.pbs.org/">PBS</a> where I learned countless animal factoids
+    while working on <em>PBS Nature</em>. I like doing things on computers.
+    I also like doing a lot of <a href="/favoritethings">other things</a>.
 
-
-  <div class="contact"><a href="mailto:katesuzannefulton@gmail.com">Email me.</a>
-    <a href="https://twitter.com/kate_fulton">Follow me.</a></div>
+    <p class="contact"><a href="mailto:katesuzannefulton@gmail.com">Email me.</a>
+    <a href="https://twitter.com/kate_fulton">Follow me.</a></p>
   </section>
+</article>
