--- a/views/favoritethings.erb
+++ b/views/favoritethings.erb
@@ -4,7 +4,7 @@
   <li>playing pool in dive bars</li>
   <li>reading poetry, especially by <a href="http://en.wikipedia.org/wiki/John_Berryman" target="blank">this guy</a>.</li>
   <li>eating artisanal ice cream</li>
-  <li>filling-in crossword puzzles</li>
+  <li>filling in crossword puzzles</li>
   <li>organizing dim sum outings</li>
   <li>challenging preconceived notions of gender</li>
   <li>talking up <a href="http://www.newyorker.com/magazine/2013/05/20/the-walking-alive" target="blank">treadmill desks</a></li>
