--- a/views/posts/2014-09-30/HTML_Reinforcing_Meaning.erb
+++ b/views/posts/2014-09-30/HTML_Reinforcing_Meaning.erb
@@ -114,7 +114,8 @@
           While divs and spans nicely illustrate the HTML box model, it's worth noting
           that they are not ideal elements to use when trying to convey meaning in your
           HTML document. Neither divs nor spans hold any semantic value. Rather, they are generic
-          container elements used as a way to attach information (CSS design) to
+          container elements used as a way to attach information (like design dictated by a
+          CSS class or id) to
           the contents within. If another tag can be used that better describes
           your content, use it. This isn't to say that divs and spans aren't valuable.
           Afterall, it's just as bad to assign false meaning to your content than it is
