--- a/views/index.erb
+++ b/views/index.erb
@@ -15,7 +15,7 @@
     </section>
   </section>
 
-  <section class="blog_list home">
+  <section class="blog-list home">
       <hgroup><h3>Recent Posts</h3></hgroup>
       <% @posts.each do |post| %>
         <a href="<%= post.url %>"><%= post.title%></a><br/>
