--- a/views/bloglanding.erb
+++ b/views/bloglanding.erb
@@ -1,7 +1,7 @@
 <article>
 
   <form class="search">
-    Search all posts:
+    Search all posts:<br/>
     <input type="text" name="search" placeholder="keyword">
     <input class="btn" type="submit" value="Search">
   </form>
@@ -11,7 +11,7 @@
   </section>
 
   <section class="blog-list blog-landing-list">
-      <hgroup><h3>Recent Posts</h3></hgroup>
+      <hgroup><h3>Blog Posts</h3></hgroup>
       <% @posts.each do |post| %>
         <a href="<%= post.url %>"><%= post.title%></a><br/>
         <%= post.excerpt %>... <a href="<%= post.url %>">More</a><br/><br/>
