--- a/views/bloglanding.erb
+++ b/views/bloglanding.erb
@@ -1,6 +1,6 @@
 <article>
 
-  <form class="search">
+  <form class="search" action="/search" method="post">
     Search all posts:<br/>
     <input type="text" name="search" placeholder="keyword">
     <input class="btn" type="submit" value="Search">
