--- a/views/posts/2014-10-4/HTML_Reinforcing_Meaning.erb
+++ b/views/posts/2014-10-4/HTML_Reinforcing_Meaning.erb
@@ -121,4 +121,5 @@
           Afterall, it's just as bad to assign false meaning to your content than it is
           to fail to assign any. Div and span tags are ideal for those instances when
           tags that hold more semantic weight just don't make sense for your content.
+      </section>
   </article>
