--- a/public/css/blog.css
+++ b/public/css/blog.css
@@ -96,7 +96,6 @@ a:active {
 
 .blog-list {
   position: relative;
-  margin: 1em 0 0 1em;
 }
 
 
@@ -123,7 +122,7 @@ a:active {
   clear: both;
 }
 
-/*CSS for blog landing page begins here*/
+/*CSS for blog landing & search page begins here*/
 
 .blog-landing-image {
   width: 100%;
@@ -135,7 +134,6 @@ a:active {
   color: #444;
   margin-left: .4em;
   margin-top: 2em;
-  line-height: .6em;
 }
 
 .btn {
@@ -155,8 +153,8 @@ a:active {
 .btn:hover {
    background: #444;
    color: #ffffff;
+   border-bottom: 0;
 }
-
 
 /* CSS for blog entries begins here */
 
@@ -283,7 +281,7 @@ td {
 
 /* MEDIA QUERIES BEGIN HERE*/
 
-@media screen and (min-width: 550px) {
+@media screen and (min-width: 580px) {
   .home_image {
     width: 200px;
     margin: 0 4em 0 0;
