--- a/views/bloglanding.erb
+++ b/views/bloglanding.erb
@@ -14,7 +14,7 @@
       <hgroup><h3>Blog Posts</h3></hgroup>
       <% @posts.each do |post| %>
         <a href="<%= post.url %>"><%= post.title%></a><br/>
-        <%= post.excerpt %>... <a href="<%= post.url %>">More</a><br/><br/>
+        <%= post.excerpt %>...<br/><br/>
       <% end %>
   </section>
 </article>
