--- a/views/index.erb
+++ b/views/index.erb
@@ -19,6 +19,6 @@
       <hgroup><h3>Recent Posts</h3></hgroup>
       <% @posts.each do |post| %>
         <a href="<%= post.url %>"><%= post.title%></a><br/>
-        <%= post.excerpt %>... <a href="<%= post.url %>">More</a><br/><br/>
+        <%= post.excerpt %>...<br/><br/>
       <% end %>
   </section>
